<resources>
    <string name="app_name">Vibe Music</string>
    <string name="name_app">Vibe Music</string>
    <string name="name">Diego Ramos</string>
    <string name="home_text">Inicia una nueva aventura con Vibe Music y descubre una nueva forma de ver el mundo</string>
    <string name="start">Comienza</string>
    <string name="reg">Regístrate</string>
    <string name="text_login">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="txt_btn_login">Ingresar</string>
    <string name="txt_rec_password">Recupera Tu Contraseña</string>
    <string name="txt_reg_pt2">Regístrate</string>
    <string name="txt_reg_pt1">No tienes cuenta?</string>
    <string name="txt_log_goog">Ingresa con Google</string>
    <string name="txt_register">¿Eres nuevo? Registrate</string>
    <string name="txt_reg_name">Nombre</string>
    <string name="txt_reg_lname">Apellidos</string>
    <string name="txt_reg_email">Correo electronico</string>
    <string name="txt_reg_phone">Teléfono</string>
    <string name="txt_reg_password">Contraseña</string>
    <string name="txt_reg_repassword">Repite tu contraseña</string>
    <string name="txt_reg_TyC">Acepto los Términos y Condiciones</string>
    <string name="txt_reg_exepTyC">Debes aceptar los términos y condiciones para continuar</string>
    <string name="txt_recPassword">Recuperar contraseña</string>
    <string name="txt_recPassword_sol">Enviar solicitud</string>
    <string name="txt_userName">Diego Alejandro</string>
    <string name="txt_userLastName">Ramos Morales</string>
    <string name="txt_userEmail">dalejandroramos@ucompensar.edu.co</string>
    <string name="txt_profile">Sus datos:</string>
    <string name="txt_userPhone">3124840054</string>
    <string name="txt_profile_bt_edit">Editar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="op1">inicio</string>
    <string name="op2">Mi perfil</string>
    <string name="op3">Configuracion</string>
    <string name="op4">Cerrar sesion</string>

</resources>