<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="124dp"
            android:layout_height="162dp"
            android:src="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_name_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/name_app"
            android:textColor="@color/blue"
            android:textSize="48sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/txt_register"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/cont_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_pink_tv"
            android:hint="@string/txt_reg_name"
            android:inputType="text"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>


        <EditText
            android:id="@+id/cont_lastName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_pink_tv"
            android:hint="@string/txt_reg_lname"
            android:inputType="text"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/cont_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_pink_tv"
            android:hint="@string/txt_reg_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/cont_phone"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_pink_tv"
            android:hint="@string/txt_reg_phone"
            android:inputType="phone"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/cont_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_pink_tv"
            android:hint="@string/txt_reg_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/cont_rePassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_pink_tv"
            android:hint="@string/txt_reg_repassword"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

        <CheckBox
            android:id="@+id/check_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_reg_TyC"
            android:textColor="@color/blue"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btn_goLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_login"
            android:backgroundTint="@color/pink"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</ScrollView>
