<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="269dp"
            android:layout_height="272dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_name_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/name_app"
            android:textColor="@color/blue"
            android:textSize="48sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tv_text_home"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/home_text"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="301dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/pink"
            android:fontFamily="sans-serif-medium"
            android:text="@string/start"
            android:textAlignment="center"
            android:textSize="42sp"
            android:layout_marginTop="16dp"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp" />

        <TextView
            android:id="@+id/tv_reg"
            android:layout_width="153dp"
            android:layout_height="34dp"
            android:fontFamily="sans-serif"
            android:text="@string/reg"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>
</ScrollView>
