<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="124dp"
            android:layout_height="162dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_name_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/name_app"
            android:textColor="@color/blue"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="381dp"
            android:layout_height="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/txt_recPassword"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_app"
            app:layout_constraintVertical_bias="0.169" />

        <EditText
            android:id="@+id/cont_name"
            android:layout_width="241dp"
            android:layout_height="55dp"
            android:background="@drawable/background_pink_tv"
            android:ems="10"
            android:hint="@string/txt_reg_email"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="false"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_register"
            app:layout_constraintVertical_bias="0.205" />

        <Button
            android:id="@+id/btn_goLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:backgroundTint="@color/pink"
            android:text="@string/txt_recPassword_sol"
            android:textColor="@android:color/white"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cont_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
