<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="124dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/name_app"
        android:textColor="@color/blue"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="386dp"
        android:layout_height="75dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_login"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_app"
        app:layout_constraintVertical_bias="0.092" />

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/img_password"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_user"
        app:layout_constraintVertical_bias="0.047"
        app:srcCompat="@drawable/password" />

    <EditText
        android:id="@+id/cont_email"
        android:layout_width="241dp"
        android:layout_height="55dp"
        android:background="@drawable/background_pink_tv"
        android:ems="10"
        android:inputType="text"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toEndOf="@+id/img_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <EditText
        android:id="@+id/cont_email2"
        android:layout_width="241dp"
        android:layout_height="55dp"
        android:background="@drawable/background_pink_tv"
        android:ems="10"
        android:inputType="text"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toEndOf="@+id/img_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="301dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/pink"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_btn_login"
        android:textAlignment="center"
        android:textSize="42sp"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_log_goog"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_log_goog"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:strokeColor="@color/pink"
        app:strokeWidth="2dp"
        app:backgroundTint="@color/white"
        app:icon="@drawable/google"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconSize="20dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rec_password" />

    <TextView
        android:id="@+id/tv_rec_password"
        android:layout_width="277dp"
        android:layout_height="34dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_rec_password"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/tv_reg_pt1"
        android:layout_width="212dp"
        android:layout_height="34dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_reg_pt1"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        app:layout_constraintVertical_bias="0.797" />

    <TextView
        android:id="@+id/tv_reg_pt2"
        android:layout_width="153dp"
        android:layout_height="38dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_reg_pt2"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_reg_pt1"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        app:layout_constraintVertical_bias="0.817" />

</androidx.constraintlayout.widget.ConstraintLayout>